--- a/css/tng.css
+++ b/css/tng.css
@@ -5,44 +5,39 @@
  * reveal.js is Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
  */
 
-@import url(reveal.min.css);
-@import url(print/pdf.css) print;
-    /* syntax highlighting */
-@import url(github.css);
-
 @font-face {
     font-family: 'Lato';
     font-style: normal;
     font-weight: 400;
-    src: local('Lato Regular'), local('Lato-Regular'), url('Lato-Regular.woff') format('woff');
+    src: local('Lato Regular'), local('Lato-Regular'), url('../lib/font/Lato-Regular.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Lato';
     font-style: normal;
     font-weight: 700;
-    src: local('Lato Bold'), local('Lato-Bold'), url('Lato-Bold.woff') format('woff');
+    src: local('Lato Bold'), local('Lato-Bold'), url('../lib/font/Lato-Bold.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Lato';
     font-style: italic;
     font-weight: 400;
-    src: local('Lato Italic'), local('Lato-Italic'), url('Lato-Italic.woff') format('woff');
+    src: local('Lato Italic'), local('Lato-Italic'), url('../lib/font/Lato-Italic.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Lato';
     font-style: italic;
     font-weight: 700;
-    src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url('Lato-BoldItalic.woff') format('woff');
+    src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url('../lib/font/Lato-BoldItalic.woff') format('woff');
 }
 
 @font-face {
     font-family: 'News Cycle';
     font-style: normal;
     font-weight: 400;
-    src: local('News Cycle Regular'), local('NewsCycle-Regular'), url('NewsCycle-Regular.woff') format('woff');
+    src: local('News Cycle Regular'), local('NewsCycle-Regular'), url('../lib/font/NewsCycle-Regular.woff') format('woff');
 }
 
 .reveal pre code {
