--- a/css/theme/tng.css
+++ b/css/theme/tng.css
@@ -1,38 +1,50 @@
 /**
- * Solarized Light theme for reveal.js.
- * Author: Achim Staebler
+ * TNG theme for reveal.js presentations. Based on the default theme with:
+ * Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
  */
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
 @font-face {
   font-family: 'League Gothic';
   src: url("../../lib/font/league_gothic-webfont.eot");
   src: url("../../lib/font/league_gothic-webfont.eot?#iefix") format("embedded-opentype"), url("../../lib/font/league_gothic-webfont.woff") format("woff"), url("../../lib/font/league_gothic-webfont.ttf") format("truetype"), url("../../lib/font/league_gothic-webfont.svg#LeagueGothicRegular") format("svg");
   font-weight: normal;
   font-style: normal; }
-/**
- * Solarized colors by Ethan Schoonover
- */
-html * {
-  color-profile: sRGB;
-  rendering-intent: auto; }
-
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Lato Regular"), local("Lato-Regular"), url("../../lib/font/Lato-Regular.woff") format("woff"), url("../../lib/font/Lato-Regular.ttf") format("truetype"); }
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Lato Bold"), local("Lato-Bold"), url("../../lib/font/Lato-Bold.woff") format("woff"), url("../../lib/font/Lato-Bold.ttf") format("truetype"); }
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 400;
+  src: local("Lato Italic"), local("Lato-Italic"), url("../../lib/font/Lato-Italic.woff") format("woff"), url("../../lib/font/Lato-Italic.ttf") format("truetype"); }
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 700;
+  src: local("Lato Bold Italic"), local("Lato-BoldItalic"), url("../../lib/font/Lato-BoldItalic.woff") format("woff"), url("../../lib/font/Lato-BoldItalic.ttf") format("truetype"); }
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #fdf6e3;
-  background-color: #fdf6e3; }
+  background: white;
+  background-color: white; }
 
 .reveal {
   font-family: "Lato", sans-serif;
   font-size: 36px;
   font-weight: normal;
   letter-spacing: -0.02em;
-  color: #657b83; }
+  color: black; }
 
 ::selection {
   color: white;
-  background: #d33682;
+  background: #5f82ff;
   text-shadow: none; }
 
 /*********************************************
@@ -45,8 +57,8 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #586e75;
-  font-family: "League Gothic", Impact, sans-serif;
+  color: black;
+  font-family: "News Cycle", Impact, sans-serif;
   line-height: 0.9em;
   letter-spacing: 0.02em;
   text-transform: uppercase;
@@ -59,7 +71,7 @@ body {
  * LINKS
  *********************************************/
 .reveal a:not(.image) {
-  color: #268bd2;
+  color: darkblue;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
@@ -68,13 +80,13 @@ body {
   transition: color .15s ease; }
 
 .reveal a:not(.image):hover {
-  color: #78b9e6;
+  color: #0000f1;
   text-shadow: none;
   border: none; }
 
 .reveal .roll span:after {
   color: #fff;
-  background: #1a6091; }
+  background: #00003f; }
 
 /*********************************************
  * IMAGES
@@ -82,7 +94,7 @@ body {
 .reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #657b83;
+  border: 4px solid black;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
   -webkit-transition: all .2s linear;
   -moz-transition: all .2s linear;
@@ -92,7 +104,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #268bd2;
+  border-color: darkblue;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
@@ -100,31 +112,31 @@ body {
  *********************************************/
 .reveal .controls div.navigate-left,
 .reveal .controls div.navigate-left.enabled {
-  border-right-color: #268bd2; }
+  border-right-color: darkblue; }
 
 .reveal .controls div.navigate-right,
 .reveal .controls div.navigate-right.enabled {
-  border-left-color: #268bd2; }
+  border-left-color: darkblue; }
 
 .reveal .controls div.navigate-up,
 .reveal .controls div.navigate-up.enabled {
-  border-bottom-color: #268bd2; }
+  border-bottom-color: darkblue; }
 
 .reveal .controls div.navigate-down,
 .reveal .controls div.navigate-down.enabled {
-  border-top-color: #268bd2; }
+  border-top-color: darkblue; }
 
 .reveal .controls div.navigate-left.enabled:hover {
-  border-right-color: #78b9e6; }
+  border-right-color: #0000f1; }
 
 .reveal .controls div.navigate-right.enabled:hover {
-  border-left-color: #78b9e6; }
+  border-left-color: #0000f1; }
 
 .reveal .controls div.navigate-up.enabled:hover {
-  border-bottom-color: #78b9e6; }
+  border-bottom-color: #0000f1; }
 
 .reveal .controls div.navigate-down.enabled:hover {
-  border-top-color: #78b9e6; }
+  border-top-color: #0000f1; }
 
 /*********************************************
  * PROGRESS BAR
@@ -133,7 +145,7 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #268bd2;
+  background: darkblue;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
@@ -144,4 +156,45 @@ body {
  * SLIDE NUMBER
  *********************************************/
 .reveal .slide-number {
-  color: #268bd2; }
+  color: darkblue; }
+
+.reveal section img {
+  border: none; }
+
+.reveal pre code {
+  font-family: Droid Sans Mono, monospace;
+  max-height: 700px;
+  box-shadow: 0 0 10px black; }
+
+body.charred .reveal .slides section .fragment.visible {
+  opacity: 0.3; }
+body.charred .reveal .slides section .fragment.visible.no-burn,
+body.charred .reveal .slides section .fragment.visible.focus,
+body.charred .reveal .slides section .fragment.highlight {
+  opacity: 1; }
+body.charred .reveal .slides section .fragment.highlight.focus {
+  background-color: yellow;
+  -webkit-border-radius: 4px; }
+
+.reveal ul {
+  list-style-type: square; }
+
+/* apply .not-printed to elements that should not be displayed in hardcopy */
+@media print {
+  .not-printed {
+    visibility: hidden !important; }
+
+  .reveal .slides section.not-printed {
+    display: none !important; } }
+.i18n {
+  display: none; }
+
+.reveal > .slides section .title,
+.reveal > .slides section .selected-title {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 5px; }
+.reveal > .slides section .title {
+  background-color: #e3e3e3; }
+.reveal > .slides section .selected-title {
+  background-color: #bbbbbb; }
