remove rule for non existing font file

--- a/css/theme/source/tng.scss
+++ b/css/theme/source/tng.scss
@@ -55,8 +55,7 @@
   font-weight: 400;
   src: local('News Cycle Regular'),
   local('NewsCycle-Regular'),
-  url('../../lib/font/NewsCycle-Regular.woff') format('woff'),
-  url('../../lib/font/NewsCycle-Regular.ttf') format('truetype');
+  url('../../lib/font/NewsCycle-Regular.woff') format('woff');
 }
 
 // original url import, now saved locally (see above)
