--- a/css/theme/tng.css
+++ b/css/theme/tng.css
@@ -26,8 +26,7 @@
   font-family: 'News Cycle';
   font-style: normal;
   font-weight: 400;
-  src: local('News Cycle Regular'), local('NewsCycle-Regular'), url("../../lib/font/NewsCycle-Regular.woff") format('woff');
-}
+  src: local("News Cycle Regular"), local("NewsCycle-Regular"), url("../../lib/font/NewsCycle-Regular.woff") format("woff"); }
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
