gather custom rules in nested block, add standard compliant border radius

--- a/css/theme/source/tng.scss
+++ b/css/theme/source/tng.scss
@@ -102,14 +102,36 @@ $selectionColor: #fff;
 @import "../template/theme";
 // ---------------------------------------------
 
-// other overrides
-.reveal section img {
-  border: none;
-}
-.reveal pre code {
-  font-family: Droid Sans Mono, monospace;
-  max-height: 700px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+// other overrides -----------------------------
+.reveal {
+  section img {
+    border: none;
+  }
+  pre code {
+    font-family: Droid Sans Mono, monospace;
+    max-height: 700px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+  }
+  ul {
+    list-style-type: square;
+  }
+  > .slides section {
+    .title,
+    .selected-title {
+      margin-top: 5px;
+      margin-bottom: 5px;
+
+      border-radius: 5px;
+    }
+
+    .title {
+      background-color: #e3e3e3;
+    }
+
+    .selected-title {
+      background-color: #bbbbbb;
+    }
+  }
 }
 
 body.charred .reveal .slides section {
@@ -124,11 +146,8 @@ body.charred .reveal .slides section {
   .fragment.highlight.focus {
     background-color: yellow;
     -webkit-border-radius: 4px;
+    border-radius: 4px;
   }
-}
-
-.reveal ul {
-  list-style-type: square;
 }
 
 /* apply .not-printed to elements that should not be displayed in hardcopy */
@@ -146,20 +165,4 @@ body.charred .reveal .slides section {
   display: none;
 }
 
-.reveal > .slides section {
-  .title,
-  .selected-title {
-    margin-top: 5px;
-    margin-bottom: 5px;
-
-    border-radius: 5px;
-  }
-
-  .title {
-    background-color: #e3e3e3;
-  }
-
-  .selected-title {
-    background-color: #bbbbbb;
-  }
-}
+// ---------------------------------------------
