--- a/css/custom.css
+++ b/css/custom.css
@@ -16,27 +16,29 @@
 p {
     text-align: left;
 }
-
+.handsOn {
+    background-color:#e6e6fa;
+}
 .rotatingImage {
     margin: -60px 0 0 -60px;
-    -webkit-animation: spin 30s linear infinite;
     -webkit-animation-fill-mode: forwards;
     -moz-animation: spin 40s linear infinite;
     animation: spin 40s linear infinite;
+    transform: rotate(-45deg);
 }
 
 @-moz-keyframes spin {
     100% {
-        -moz-transform: rotate(360deg);
+        -moz-transform: rotate(45deg);
     }
 }
 
 @-webkit-keyframes spin {
-    100% { -webkit-transform: rotate(360deg) }
+    100% { -webkit-transform: rotate(45deg) }
 }
 
 @-webkit-keyframes CW {
-    100% { -webkit-transform: rotate(360deg) }
+    100% { -webkit-transform: rotate(45deg) }
 }
 @-webkit-keyframes CCW {
     100% { -webkit-transform: rotate(0deg) }
@@ -44,7 +46,7 @@ p {
 
 @keyframes spin {
     100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
+        -webkit-transform: rotate(45deg);
+        transform: rotate(45deg);
     }
 }
